classDiagram
    Conta <|-- conta_usuario
    Conta <|-- conta_adm
    Conta : -nome
    Conta : ~senha
    Conta : -idade
    Conta : +register()
    Conta : +login()
    Conta : +logout()

    
    conta_usuario <|-- conta_jogador
    conta_usuario <|-- conta_tecnico
    conta_usuario <|-- conta_arbitro
    conta_usuario : saldo
    conta_usuario : interesses
    conta_usuario : exibirSaldo()
    conta_usuario : apostar()
    conta_usuario : exibirPerfil()
    conta_usuario : editarPerfil()
    conta_usuario : deletarConta()
    conta_usuario : adicionarInteresses()
    conta_usuario : exibirInteresses()
    conta_usuario : deletarInteresses()
    conta_usuario : inscreverEmEventos()
    conta_usuario : ParticiparDeEventos()
    conta_usuario : SairDeEventos()

    conta_jogador -- perfil
    conta_jogador : posicao
    conta_jogador : time
    conta_jogador : codigo
    conta_jogador : gols
    conta_jogador : assistencias
    conta_jogador : eventos
    conta_jogador : jogos
    conta_jogador : partidas
    conta_jogador : exibirTime()
    conta_jogador : sairTime()
    conta_jogador : exibirCodigo()
    conta_jogador : exibirGolgs()
    conta_jogador : exibirAssistencias()
    conta_jogador : exibirJogos()
    conta_jogador : exibirPartidas()

    conta_tecnico -- perfil
    conta_tecnico : time
    conta_tecnico : eventos
    conta_tecnico : jogos
    conta_tecnico : partidas
    conta_tecnico : criarEventos()
    conta_tecnico : exibirEventos()
    conta_tecnico : editarEventos()
    conta_tecnico : deletarEventos()
    conta_tecnico : entrarJogo()
    conta_tecnico : sairJogo()
    conta_tecnico : criarTime()
    conta_tecnico : exibirTime()
    conta_tecnico : editarTime()
    conta_tecnico : deletarTime()
    conta_tecnico : adicionarJogadorDoTime()
    conta_tecnico : removerJogadorDoTime()
    conta_tecnico : entrarEmPartidas()
    conta_tecnico : exibirPartidas()
    conta_tecnico : sairDePartidas()

    conta_arbitro : jogos
    conta_arbitro : partidas
    conta_arbitro : criarJogo()
    conta_arbitro : exibirJogo()
    conta_arbitro : editarJogo()
    conta_arbitro : deletarJogo()
    conta_arbitro : criarPartidas()
    conta_arbitro : exibirPartidas()
    conta_arbitro : editarPartidas()
    conta_arbitro : deletarPartidas()
    conta_arbitro : encerrarPartidas()

    conta_adm : criarConta()
    conta_adm : editarConta()
    conta_adm : deletarConta()
    conta_adm : criarJogador()
    conta_adm : editarJogador()
    conta_adm : deletarJogador()
    conta_adm : criarTecnico()
    conta_adm : editarTecnico()
    conta_adm : deletarTecnico()
    conta_adm : criarArbitro()
    conta_adm : editarArbitro()
    conta_adm : deletarArbitro()
    conta_adm : editarSaldo()
    conta_adm : criarTime()
    conta_adm : editarTime()
    conta_adm : deletarTime()
    conta_adm : criarJogo()
    conta_adm : editarJogo()
    conta_adm : deletarJogo()
    conta_adm : criarPartidas()
    conta_adm : editarPartidas()
    conta_adm : deletarPartidas()
    conta_adm : encerrarPartidas()



    perfil : +nome
    perfil : +idade
    perfil : ~senha
    perfil : -saldo
    perfil : +time
    perfil : +posicao
    perfil : +eventos
    perfil : +jogos
    perfil : +partidas
    perfil : -codigo